--- a/Blinks/Localizable.strings
+++ b/Blinks/Localizable.strings
@@ -11,3 +11,4 @@ btnRecognizeTitle = "Recognize Me!";
 allowCameraAlert = "You must allow camere permissions,\nplease go to the settings app to do so.";
 Ok = "Ok";
 deviceNotSupportFaceTracking = "Your device does not support face tracking, sorry :(";
+generalError = "An error occurred.\nPlease try again.";
